# CYBERSECURITY-WORKER-AGENT

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: cd-production.yaml  cd-staging.yaml  ci.yaml  deploy-docs.yaml  deploy.yml
.specify/memory/: constitution.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  9befde7973e8_add_users_sessions_audit_logs_agent_.py
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  base.py  detection.py  enrichment.py  incident.py  report.py  supervisor.py  threat_intel.py  triage.py
backend/src/agents/prompts/: detection.py  enrichment.py  incident_commander.py  report.py  threatintel.py  triage.py
backend/src/api/: __init__.py  middleware.py
backend/src/api/routes/: agent_runs.py  approvals.py  auth.py  chat.py  conversations.py  documents.py  health.py
backend/src/auth/: __init__.py  deps.py  jwt.py  password.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/models/: __init__.py  agent.py  conversation.py  document.py  user.py
backend/src/schemas/: __init__.py  agent_run.py  approval.py  audit.py  chat.py  session.py  user.py
backend/src/services/: __init__.py  embedding.py  ingestion.py  qdrant.py  rag.py  vector_store.py
backend/src/services/ingestion_service/: __init__.py  chunker.py  indexer.py  main.py
backend/src/services/rag_service/: __init__.py  embeddings.py  main.py  retriever.py
backend/tests/: __init__.py  test_main.py
deploy/helm/ai-soc-platform/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
docs/: Dockerfile  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs/docs/: intro.md
docs/docs/detection/: sigma-rules.md
docs/docs/fundamentals/: security-frameworks.md  soc-overview.md  threat-landscape.md
docs/docs/incident-response/: ir-process.md
docs/docs/module-1-soc-foundations/: 01-introduction.md  02-team-roles.md  03-alert-triage.md  04-tools.md  05-incident-response.md  index.md
docs/docs/module-2-agentic-ai/: 01-introduction.md  02-architecture.md  index.md
docs/docs/module-3-ai-soc-workflows/: 01-ai-triage.md  index.md
docs/docs/module-4-ai-security/: 01-risks.md  index.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  (+3 more)
mcp/: Dockerfile  pyproject.toml
mcp/src/: __init__.py  main.py
mcp/src/tools/: __init__.py  case_management.py  domain_analyzer.py  evidence_logs.py  hash_analyzer.py  ip_analyzer.py  rag_knowledge.py  safe_actions.py  sigma_generator.py  threat_intel.py
mcp/tests/: __init__.py
scripts/: local-dev.sh  run-tests.sh
specs/1-ai-soc-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+36 files in other folders)
